0.10.1/_sources/gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/plot_peak_finding.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/plot_peak_finding.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_finding.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_finding.py:


Find peak maxima in an IR time series
====================================

This example shows a compact workflow to locate peak maxima on an IR dataset
and visualize the detected positions on top of the last spectrum.

.. GENERATED FROM PYTHON SOURCE LINES 14-33

.. code-block:: default


    import spectrochempy as scp


    def _as_iterable(values):
        if getattr(values, "shape", ()) == ():
            return [values]
        return values


    def _tracked_peak_position(spec):
        peaks, _ = spec.find_peaks(distance="5 cm^-1", prominence=0.02)
        if peaks is not None:
            return peaks.x.values.max()

        index = spec.data.argmax()
        return spec.x[index].values









.. GENERATED FROM PYTHON SOURCE LINES 34-35

Load a time-resolved IR dataset and express the acquisition axis in minutes.

.. GENERATED FROM PYTHON SOURCE LINES 35-41

.. code-block:: default


    dataset = scp.read("irdata/CO@Mo_Al2O3.SPG")
    dataset.y -= dataset.y.data[0]
    dataset.y.title = "time"
    dataset.y = dataset.y.to("minutes")








.. GENERATED FROM PYTHON SOURCE LINES 42-43

Focus on the carbonyl region.

.. GENERATED FROM PYTHON SOURCE LINES 43-51

.. code-block:: default


    region = dataset[:, 2300.0:1900.0]
    prefs = scp.preferences
    prefs.figure.figsize = (7, 4)
    prefs.colormap = "Dark2"
    prefs.colorbar = True
    _ = region.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_001.png
   :alt: plot peak finding
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 52-54

Peak finding can use spacing constraints directly in coordinate units when
the spectral axis is linear.

.. GENERATED FROM PYTHON SOURCE LINES 54-59

.. code-block:: default


    last = region[-1]
    peaks, properties = last.find_peaks(distance="5 cm^-1", prominence=0.02)
    peaks.x.values






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[2157.805 2115.083]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>cm<sup>-1</sup></td></tr></tbody></table>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 60-61

Plot the detected maxima on top of the last spectrum.

.. GENERATED FROM PYTHON SOURCE LINES 61-85

.. code-block:: default


    ax = last.plot_pen()
    markers = peaks + 0.015
    _ = markers.plot_scatter(
        ax=ax,
        clear=False,
        data_only=True,
        marker="v",
        color="black",
    )

    for x, y in zip(
        _as_iterable(markers.x.values),
        _as_iterable(markers.values),
        strict=False,
    ):
        _ = ax.annotate(
            f"{x.m:0.0f}",
            xy=(x.m, y.m),
            xytext=(-5, 0),
            rotation=90,
            textcoords="offset points",
        )




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_002.png
   :alt: plot peak finding
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 86-88

The optional properties dictionary can be useful to inspect how the peaks
were selected.

.. GENERATED FROM PYTHON SOURCE LINES 88-91

.. code-block:: default


    sorted(properties)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ['left_bases', 'prominences', 'right_bases']



.. GENERATED FROM PYTHON SOURCE LINES 92-95

The same logic can be applied to each spectrum of the time series. Here we
follow one band in a restricted region so each spectrum contributes one peak
position.

.. GENERATED FROM PYTHON SOURCE LINES 95-104

.. code-block:: default


    tracked_region = region[:, 2220.0:2180.0]
    positions = [_tracked_peak_position(spec) for spec in tracked_region]

    evolution = scp.NDDataset(positions, title="peak maxima position")
    evolution.x = scp.Coord(region.y, title="acquisition time")
    evolution.units = "cm^-1"
    _ = evolution.plot(ls=":", marker="o", ms=3)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_003.png
   :alt: plot peak finding
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 105-107

This ends the example. Uncomment the next line to display the figures when
running the script directly with Python.

.. GENERATED FROM PYTHON SOURCE LINES 107-109

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.525 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_finding.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_peak_finding.py <plot_peak_finding.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_peak_finding.ipynb <plot_peak_finding.ipynb>`
