0.12.4/_sources/gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/plot_peak_finding.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/plot_peak_finding.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_finding.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_finding.py:


Find peak maxima in an IR time series
=====================================

This example shows a compact workflow to locate peak maxima on an IR dataset
and visualize the detected positions on top of the last spectrum.

.. GENERATED FROM PYTHON SOURCE LINES 14-33

.. code-block:: Python


    import spectrochempy as scp


    def _as_iterable(values):
        if getattr(values, "shape", ()) == ():
            return [values]
        return values


    def _tracked_peak_position(spec):
        peaks, _ = spec.find_peaks(distance="5 cm^-1", prominence=0.02)
        if peaks is not None:
            return peaks.x.values.max()

        index = spec.data.argmax()
        return spec.x[index].values









.. GENERATED FROM PYTHON SOURCE LINES 34-36

Load and focus on the carbonyl region
---------------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 36-48

.. code-block:: Python

    dataset = scp.read("irdata/CO@Mo_Al2O3.SPG")
    dataset.y -= dataset.y.data[0]
    dataset.y.title = "time"
    dataset.y = dataset.y.to("minutes")

    region = dataset[:, 2300.0:1900.0]
    prefs = scp.preferences
    prefs.figure.figsize = (7, 4)
    prefs.colormap = "Dark2"
    prefs.colorbar = True
    _ = region.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_001.png
   :alt: plot peak finding
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 49-51

Find peaks with coordinate-aware constraints
---------------------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 51-55

.. code-block:: Python

    last = region[-1]
    peaks, properties = last.find_peaks(distance="5 cm^-1", prominence=0.02)
    peaks.x.values






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <table><tbody><tr><th>Magnitude</th><td style='text-align:left;'><pre>[2157.805 2115.083]</pre></td></tr><tr><th>Units</th><td style='text-align:left;'>cm<sup>-1</sup></td></tr></tbody></table>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 56-58

Visualize detected peaks
~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 58-81

.. code-block:: Python

    ax = last.plot_pen()
    markers = peaks + 0.015
    _ = markers.plot_scatter(
        ax=ax,
        clear=False,
        data_only=True,
        marker="v",
        color="black",
    )

    for x, y in zip(
        _as_iterable(markers.x.values),
        _as_iterable(markers.values),
        strict=False,
    ):
        _ = ax.annotate(
            f"{x.m:0.0f}",
            xy=(x.m, y.m),
            xytext=(-5, 0),
            rotation=90,
            textcoords="offset points",
        )




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_002.png
   :alt: plot peak finding
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 82-83

Inspect the properties dictionary:

.. GENERATED FROM PYTHON SOURCE LINES 83-85

.. code-block:: Python

    sorted(properties)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ['left_bases', 'prominences', 'right_bases']



.. GENERATED FROM PYTHON SOURCE LINES 86-89

Track a band across the time series
------------------------------------
Follow one band in a restricted region:

.. GENERATED FROM PYTHON SOURCE LINES 89-97

.. code-block:: Python

    tracked_region = region[:, 2220.0:2180.0]
    positions = [_tracked_peak_position(spec) for spec in tracked_region]

    evolution = scp.NDDataset(positions, title="peak maxima position")
    evolution.x = scp.Coord(region.y, title="acquisition time")
    evolution.units = "cm^-1"
    _ = evolution.plot(ls=":", marker="o", ms=3)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_003.png
   :alt: plot peak finding
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/sphx_glr_plot_peak_finding_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 98-100

This ends the example. Uncomment the next line to display the figures when
running the script directly with Python.

.. GENERATED FROM PYTHON SOURCE LINES 100-102

.. code-block:: Python


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.952 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_finding.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_peak_finding.ipynb <plot_peak_finding.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_peak_finding.py <plot_peak_finding.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_peak_finding.zip <plot_peak_finding.zip>`
